finder | main panels

--- a/styles/settings.less
+++ b/styles/settings.less
@@ -270,7 +270,7 @@ atom-workspace {
       &-container {
       }
       &-card {
-        background: @black-dark;
+        background: @grey-dark; 
         border: none;
         .card-name a {
           color: @seti-primary;
