--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -3,7 +3,7 @@ atom-workspace-axis.vertical .tab-bar {
   // TAB BACKGROUND
   height: @top-bar;
   border-bottom: solid 2px rgba(0,0,0,0.3);
-  background: lighten(@tree-view-header-color, 7%);
+  background: @tree-view-header-color;
 
   // SINGLE TAB
   .tab {
