--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -47,7 +47,7 @@
 // MINI EDITOR - LARGE
 .input(@bg: #000; @color: @white; @padding: 10px;) {
   atom-text-editor[mini] {
-    background: @bg;
+    background: @input-background-color;
     color: @color;
     font-family: @seti-font-family;
     font-size: 14px;
