--- a/styles/_base.less
+++ b/styles/_base.less
@@ -2,6 +2,15 @@
   outline: 0;
 }
 
+.find-container {
+  border: 1px solid @blue;
+}
+
+.replace-container {
+    border: 1px solid @blue;
+    margin-top: 5px;
+}
+
 atom-workspace {
   font-size: @font-size;
   background-color: @app-background-color;
