--- a/styles/_fonts/seti.less
+++ b/styles/_fonts/seti.less
@@ -53,8 +53,10 @@
 	@folder: '\E01D';
 	@font: '\E01E';
 	@git_folder: '\E01F';
+	//@git_folder: '\E01F';
 	@git_ignore: '\E020';
-	@github: '\E021';
+	@github: '\E01F';
+	//@github: '\E021';
 	@go: '\E022';
 	@go2: '\E023';
 	@gradle: '\E024';
@@ -126,7 +128,7 @@
 	@windows: '\E066';
 	@xml: '\E067';
 	@yml: '\E068';
-	
+
 	content: @@filename;
 }
 
