--- a/styles/icons/sidebar.less
+++ b/styles/icons/sidebar.less
@@ -40,7 +40,7 @@ atom-panel-container > atom-panel {
   // GIT DIRECTORY
   .icon.icon-file-directory {
     &[data-name$=".git"], {
-      .icon('github', @ignore);
+      .icon('git_folder', @ignore);
       &::before {
         font-size: 25px;
         margin-top: -10px;
