--- a/styles/panes.less
+++ b/styles/panes.less
@@ -67,12 +67,13 @@ atom-panel-container.modal {
         }
 
         .status {
+
           &::before {
             top: 6px;
             left: 6px;
           }
           &-modified {
-            color: @warn;
+            color: @blue;
           }
           &-added {
             color: @good;
