selected | tab dimmed

--- a/styles/_base.less
+++ b/styles/_base.less
@@ -12,11 +12,11 @@
 }
 
 .find-container {
-  border: 1px solid @blue;
+  border: 1px solid darken(@blue, 30%);
 }
 
 .replace-container {
-    border: 1px solid @blue;
+    border: 1px solid darken(@blue, 30%);
     margin-top: 5px;
 }
 
