--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -16,6 +16,7 @@ atom-workspace-axis.vertical .tab-bar {
     font-weight: 300;
     letter-spacing: 0.05em;
     transition: linear 0.25s background;
+    opacity: 0.6;
 
     .title {
       // display: none;
@@ -48,6 +49,7 @@ atom-workspace-axis.vertical .tab-bar {
       border-right: solid 1px rgba(0,0,0,0.2);
       z-index: 1;
       height: @top-bar;
+      opacity: 1;
 
       &::after {
         width: 100%;
